--- a/index.html
+++ b/index.html
@@ -5,64 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <!-- create navigation -->
       <nav>
-        <a href="./index.html">WEB<span>STUDIO</span></a>
-        <ul>
-          <li><a href="./studio.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a href="./index.html" class="logo">WEB<span class="logo-header">STUDIO</span></a>
+        <ul class="list">
+          <li><a href="./studio.html" class="nav-links">Studio</a></li>
+          <li><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
+          <li><a href="" class="nav-links">Contacts</a></li>
         </ul>
       </nav>
 
       <!-- create contacts -->
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <ul class="list">
+        <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
 
     <main>
       <!-- create section title site -->
-      <section>
+      <section class="hero">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="button">Order Service</button>
       </section>
 
       <!-- create section "About WEBSTUDIO" -->
       <section>
         <!-- "<h2>About WEBSTUDIO</h2>" we will hide in CSS -->
-        <h2>About WEBSTUDIO</h2>
-        <ul>
+        <h2 class="section-title">About WEBSTUDIO</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
+            <h3 class="list-title">Strategy</h3>
+            <p class="list-text">
+              Our goal is to identify the business problem to walk away with the perfect and
+              creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
+            <h3 class="list-title">Punctuality</h3>
+            <p class="list-text">
+              Bring the key message to the brand's audience for the best price within the shortest
+              possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
+            <h3 class="list-title">Diligence</h3>
+            <p class="list-text">
+              Research and confirm brands that present the strongest digital growth opportunities
+              and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
+            <h3 class="list-title">Technologies</h3>
+            <p class="list-text">
+              Design practice focused on digital experiences. We bring forth a deep passion for
+              problem-solving.
             </p>
           </li>
         </ul>
@@ -70,18 +77,13 @@
 
       <!-- create section "What are we doing" -->
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="list">
           <li>
-            <img
-              src="./images/profile/monitor.jpg"
-              alt="Monitor"
-              width="360"
-              height="300"
-            />
+            <img src="./images/profile/monitor.jpg" alt="Monitor" width="360" height="300" />
           </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/profile/screens_phone.jpg"
@@ -91,7 +93,7 @@
             />
           </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/profile/phone_in_hand.jpg"
@@ -104,12 +106,12 @@
       </section>
 
       <!-- create section "Our Team" -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section style="section-fon">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list text-align">
           <li>
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="list-title">Mark Guerrero</h3>
+            <p class="list-text">Product Designer</p>
             <img
               src="./images/team/mark_guerrero.jpg"
               alt="Mark Guerrero"
@@ -118,18 +120,13 @@
             />
           </li>
           <li>
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-            <img
-              src="./images/team/tom_ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
+            <h3 class="list-title">Tom Ford</h3>
+            <p class="list-text">Frontend Developer</p>
+            <img src="./images/team/tom_ford.jpg" alt="Tom Ford" width="264" height="260" />
           </li>
           <li>
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="list-title">Camila Garcia</h3>
+            <p class="list-text">Marketing</p>
             <img
               src="./images/team/camila_garcia.jpg"
               alt="Camila Garcia"
@@ -138,8 +135,8 @@
             />
           </li>
           <li>
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="list-title">Daniel Wilson</h3>
+            <p class="list-text">UI Designer</p>
             <img
               src="./images/team/daniel_wilson.jpg"
               alt="Daniel Wilson"
@@ -151,12 +148,11 @@
       </section>
     </main>
 
-    <footer>
-      <!-- create footer -->
-      <a href="./index.html">WEB<span>STUDIO</span></a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+    <footer class="footer">
+      <a href="./index.html" class="logo line-height">WEB<span class="logo-footer">STUDIO</span></a>
+      <p class="text-footer">
+        Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.
       </p>
     </footer>
   </body>
