--- a/portfolio.html
+++ b/portfolio.html
@@ -5,23 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <!-- create navigation -->
       <nav>
-        <a href="./index.html">WEB<span>STUDIO</span></a>
-        <ul>
-          <li><a href="./studio.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a href="./index.html" class="logo">WEB<span class="logo-header">STUDIO</span></a>
+        <ul class="list">
+          <li><a href="./studio.html" class="nav-links">Studio</a></li>
+          <li><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
+          <li><a href="" class="nav-links">Contacts</a></li>
         </ul>
       </nav>
 
       <!-- create contacts -->
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <ul class="list">
+        <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
 
@@ -153,12 +160,11 @@
       </section>
     </main>
 
-    <footer>
-      <!-- create footer -->
-      <a href="./index.html">WEB<span>STUDIO</span></a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+    <footer class="footer">
+      <a href="./index.html" class="logo line-height">WEB<span class="logo-footer">STUDIO</span></a>
+      <p class="text-footer">
+        Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.
       </p>
     </footer>
   </body>
