--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <header>
       <!-- create navigation -->
@@ -41,8 +42,8 @@
 
       <!-- create section "About WEBSTUDIO" -->
       <section>
-        <!-- "<h2>About WEBSTUDIO</h2>" we will hide in CSS -->
-        <h2 class="section-title">About WEBSTUDIO</h2>
+        <!-- "<h2>About WEBSTUDIO</h2>" we hiden in CSS -->
+        <h2 class="hiden-text">About WEBSTUDIO</h2>
         <ul class="list">
           <li>
             <h3 class="list-title">Strategy</h3>
@@ -106,7 +107,7 @@
       </section>
 
       <!-- create section "Our Team" -->
-      <section style="section-fon">
+      <section class="section-fon">
         <h2 class="section-title">Our Team</h2>
         <ul class="list text-align">
           <li>
