--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <header>
       <!-- create navigation -->
@@ -33,27 +34,19 @@
     </header>
 
     <main>
-      <!-- "<h1>Portfolio</h1>" we will hide in CSS -->
-      <h1>Portfolio</h1>
+      <!-- "<h1>Portfolio</h1>" we hiden in CSS -->
+      <h1 class="hiden-text">Portfolio</h1>
 
       <!-- create sections of filters buttons -->
       <section>
         <!-- "<h2>List of filters</h2>" we will hide in CSS -->
         <h2>List of filters</h2>
-        <ul>
-          <li><button type="button">All</button></li>
-        </ul>
-        <ul>
-          <li><button type="button">Web Site</button></li>
-        </ul>
-        <ul>
-          <li><button type="button">App</button></li>
-        </ul>
-        <ul>
-          <li><button type="button">Design</button></li>
-        </ul>
-        <ul>
-          <li><button type="button">Marketing</button></li>
+        <ul class="list">
+          <li><button type="button" class="button-filters">All</button></li>
+          <li><button type="button" class="button-filters">Web Site</button></li>
+          <li><button type="button" class="button-filters">App</button></li>
+          <li><button type="button" class="button-filters">Design</button></li>
+          <li><button type="button" class="button-filters">Marketing</button></li>
         </ul>
       </section>
 
@@ -61,7 +54,7 @@
       <section>
         <!-- "<h2>Examples of work</h2>" we will hide in CSS -->
         <h2>Examples of work</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h2>Banking App Interface Concept</h2>
             <p>App</p>
@@ -92,8 +85,6 @@
               height="300"
             />
           </li>
-        </ul>
-        <ul>
           <li>
             <h2>Taxi Service</h2>
             <p>Marketing</p>
@@ -124,8 +115,6 @@
               height="300"
             />
           </li>
-        </ul>
-        <ul>
           <li>
             <h2>Instagram Stories Concept</h2>
             <p>Design</p>
