--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -42,7 +42,6 @@
 
       <!-- create section "About WEBSTUDIO" -->
       <section>
-        <!-- "<h2>About WEBSTUDIO</h2>" we hiden in CSS -->
         <h2 class="hiden-text">About WEBSTUDIO</h2>
         <ul class="list">
           <li>
@@ -87,7 +86,7 @@
         <ul class="list">
           <li>
             <img
-              src="./images/profile/screens_phone.jpg"
+              src="./images/profile/screens-phone.jpg"
               alt="Screens phone"
               width="360"
               height="300"
@@ -97,7 +96,7 @@
         <ul class="list">
           <li>
             <img
-              src="./images/profile/phone_in_hand.jpg"
+              src="./images/profile/phone-in-hand.jpg"
               alt="Phone in hand"
               width="360"
               height="300"
@@ -114,7 +113,7 @@
             <h3 class="list-title">Mark Guerrero</h3>
             <p class="list-text">Product Designer</p>
             <img
-              src="./images/team/mark_guerrero.jpg"
+              src="./images/team/mark-guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -123,13 +122,13 @@
           <li>
             <h3 class="list-title">Tom Ford</h3>
             <p class="list-text">Frontend Developer</p>
-            <img src="./images/team/tom_ford.jpg" alt="Tom Ford" width="264" height="260" />
+            <img src="./images/team/tom-ford.jpg" alt="Tom Ford" width="264" height="260" />
           </li>
           <li>
             <h3 class="list-title">Camila Garcia</h3>
             <p class="list-text">Marketing</p>
             <img
-              src="./images/team/camila_garcia.jpg"
+              src="./images/team/camila-garcia.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -139,7 +138,7 @@
             <h3 class="list-title">Daniel Wilson</h3>
             <p class="list-text">UI Designer</p>
             <img
-              src="./images/team/daniel_wilson.jpg"
+              src="./images/team/daniel-wilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
