--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -34,13 +34,11 @@
     </header>
 
     <main>
-      <!-- "<h1>Portfolio</h1>" we hiden in CSS -->
       <h1 class="hiden-text">Portfolio</h1>
 
       <!-- create sections of filters buttons -->
       <section>
-        <!-- "<h2>List of filters</h2>" we will hide in CSS -->
-        <h2>List of filters</h2>
+        <h2 class="hiden-text">List of filters</h2>
         <ul class="list">
           <li><button type="button" class="button-filters">All</button></li>
           <li><button type="button" class="button-filters">Web Site</button></li>
@@ -52,94 +50,98 @@
 
       <!-- create section of examples-->
       <section>
-        <!-- "<h2>Examples of work</h2>" we will hide in CSS -->
-        <h2>Examples of work</h2>
+        <h2 class="hiden-text">Examples of work</h2>
         <ul class="list">
           <li>
-            <h2>Banking App Interface Concept</h2>
+            <h2 class="list-title">Banking App Interface Concept</h2>
             <p>App</p>
             <img
-              src="./images/portfolio/banking_app_interface_concept.jpg"
+              src="./images/portfolio/banking-app-interface-concept.jpg"
+              alt="Banking App Interface Concept"
+              width="360"
+              height="300"
+            />
+            <!-- style="display: block" -->
+          </li>
+          <li>
+            <h2 class="list-title">Cashless Payment</h2>
+            <p class="list-text">Marketing</p>
+            <p class="text-behind">
+              14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+              App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+            <img
+              src="./images/portfolio/banking-app-interface-concept.jpg"
               alt="Banking App Interface Concept"
               width="360"
               height="300"
             />
           </li>
           <li>
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
+            <h2 class="list-title">Meditaion App</h2>
+            <p class="list-text">App</p>
             <img
-              src="./images/portfolio/cashless_payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <h2>Meditaion App</h2>
-            <p>App</p>
-            <img
-              src="./images/portfolio/meditaion_app.jpg"
+              src="./images/portfolio/meditaion-app.jpg"
               alt="Meditaion App"
               width="360"
               height="300"
             />
           </li>
           <li>
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
+            <h2 class="list-title">Taxi Service</h2>
+            <p class="list-text">Marketing</p>
             <img
-              src="./images/portfolio/taxi_service.jpg"
+              src="./images/portfolio/taxi-service.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
           </li>
           <li>
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
+            <h2 class="list-title">Screen Illustrations</h2>
+            <p class="list-text">Design</p>
             <img
-              src="./images/portfolio/screen_illustrations.jpg"
+              src="./images/portfolio/screen-illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
           </li>
           <li>
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
+            <h2 class="list-title">Online Courses</h2>
+            <p class="list-text">Marketing</p>
             <img
-              src="./images/portfolio/online_courses.jpg"
+              src="./images/portfolio/online-courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
           </li>
           <li>
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
+            <h2 class="list-title">Instagram Stories Concept</h2>
+            <p class="list-text">Design</p>
             <img
-              src="./images/portfolio/instagram_stories_concept.jpg"
+              src="./images/portfolio/instagram-stories-concept.jpg"
               alt="Instagram Stories Concept"
               width="360"
               height="300"
             />
           </li>
           <li>
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
+            <h2 class="list-title">Organic Food</h2>
+            <p class="list-text">Web Site</p>
             <img
-              src="./images/portfolio/organic_food.jpg"
+              src="./images/portfolio/organic-food.jpg"
               alt="Organic Food"
               width="360"
               height="300"
             />
           </li>
           <li>
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
+            <h2 class="list-title">Fresh Coffee</h2>
+            <p class="list-text">Web Site</p>
             <img
-              src="./images/portfolio/fresh_coffee.jpg"
+              src="./images/portfolio/fresh-coffee.jpg"
               alt="Fresh Coffee"
               width="360"
               height="300"
