--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     <header>
       <!-- create navigation -->
       <nav>
-        <a href="./index.html" class="logo">WEB<span class="logo-header">STUDIO</span></a>
+        <a class="logo" href="./index.html">WEB<span class="logo-header">STUDIO</span></a>
         <ul class="list">
-          <li><a href="./studio.html" class="nav-links">Studio</a></li>
-          <li><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
-          <li><a href="" class="nav-links">Contacts</a></li>
+          <li><a class="nav-links" href="./studio.html">Studio</a></li>
+          <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="nav-links" href="">Contacts</a></li>
         </ul>
       </nav>
 
       <!-- create contacts -->
       <ul class="list">
-        <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
+        <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
 
@@ -37,7 +37,7 @@
       <!-- create section title site -->
       <section class="hero">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <button class="button" type="button">Order Service</button>
       </section>
 
       <!-- create section "About WEBSTUDIO" -->
@@ -45,29 +45,29 @@
         <h2 class="hiden-text">About WEBSTUDIO</h2>
         <ul class="list">
           <li>
-            <h3 class="list-title">Strategy</h3>
-            <p class="list-text">
+            <h3 class="list-items">Strategy</h3>
+            <p class="item-text">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
           <li>
-            <h3 class="list-title">Punctuality</h3>
-            <p class="list-text">
+            <h3 class="list-items">Punctuality</h3>
+            <p class="item-text">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
           <li>
-            <h3 class="list-title">Diligence</h3>
-            <p class="list-text">
+            <h3 class="list-items">Diligence</h3>
+            <p class="item-text">
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="list-title">Technologies</h3>
-            <p class="list-text">
+            <h3 class="list-items">Technologies</h3>
+            <p class="item-text">
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
             </p>
@@ -110,8 +110,8 @@
         <h2 class="section-title">Our Team</h2>
         <ul class="list text-align">
           <li>
-            <h3 class="list-title">Mark Guerrero</h3>
-            <p class="list-text">Product Designer</p>
+            <h3 class="list-items">Mark Guerrero</h3>
+            <p class="item-text">Product Designer</p>
             <img
               src="./images/team/mark-guerrero.jpg"
               alt="Mark Guerrero"
@@ -120,13 +120,13 @@
             />
           </li>
           <li>
-            <h3 class="list-title">Tom Ford</h3>
-            <p class="list-text">Frontend Developer</p>
+            <h3 class="list-items">Tom Ford</h3>
+            <p class="item-text">Frontend Developer</p>
             <img src="./images/team/tom-ford.jpg" alt="Tom Ford" width="264" height="260" />
           </li>
           <li>
-            <h3 class="list-title">Camila Garcia</h3>
-            <p class="list-text">Marketing</p>
+            <h3 class="list-items">Camila Garcia</h3>
+            <p class="item-text">Marketing</p>
             <img
               src="./images/team/camila-garcia.jpg"
               alt="Camila Garcia"
@@ -135,8 +135,8 @@
             />
           </li>
           <li>
-            <h3 class="list-title">Daniel Wilson</h3>
-            <p class="list-text">UI Designer</p>
+            <h3 class="list-items">Daniel Wilson</h3>
+            <p class="item-text">UI Designer</p>
             <img
               src="./images/team/daniel-wilson.jpg"
               alt="Daniel Wilson"
@@ -149,7 +149,7 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo line-height">WEB<span class="logo-footer">STUDIO</span></a>
+      <a class="logo line-height" href="./index.html">WEB<span class="logo-footer">STUDIO</span></a>
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
