--- a/portfolio.html
+++ b/portfolio.html
@@ -18,18 +18,18 @@
     <header>
       <!-- create navigation -->
       <nav>
-        <a href="./index.html" class="logo">WEB<span class="logo-header">STUDIO</span></a>
+        <a class="logo" href="./index.html">WEB<span class="logo-header">STUDIO</span></a>
         <ul class="list">
-          <li><a href="./studio.html" class="nav-links">Studio</a></li>
-          <li><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
-          <li><a href="" class="nav-links">Contacts</a></li>
+          <li><a class="nav-links" href="./studio.html">Studio</a></li>
+          <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="nav-links" href="">Contacts</a></li>
         </ul>
       </nav>
 
       <!-- create contacts -->
       <ul class="list">
-        <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
+        <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
 
@@ -40,11 +40,11 @@
       <section>
         <h2 class="hiden-text">List of filters</h2>
         <ul class="list">
-          <li><button type="button" class="button-filters">All</button></li>
-          <li><button type="button" class="button-filters">Web Site</button></li>
-          <li><button type="button" class="button-filters">App</button></li>
-          <li><button type="button" class="button-filters">Design</button></li>
-          <li><button type="button" class="button-filters">Marketing</button></li>
+          <li><button class="button-filters" type="button">All</button></li>
+          <li><button class="button-filters" type="button">Web Site</button></li>
+          <li><button class="button-filters" type="button">App</button></li>
+          <li><button class="button-filters" type="button">Design</button></li>
+          <li><button class="button-filters" type="button">Marketing</button></li>
         </ul>
       </section>
 
@@ -53,8 +53,8 @@
         <h2 class="hiden-text">Examples of work</h2>
         <ul class="list">
           <li>
-            <h2 class="list-title">Banking App Interface Concept</h2>
-            <p>App</p>
+            <h2 class="list-items">Banking App Interface Concept</h2>
+            <p class="item-text">App</p>
             <img
               src="./images/portfolio/banking-app-interface-concept.jpg"
               alt="Banking App Interface Concept"
@@ -64,8 +64,8 @@
             <!-- style="display: block" -->
           </li>
           <li>
-            <h2 class="list-title">Cashless Payment</h2>
-            <p class="list-text">Marketing</p>
+            <h2 class="list-items">Cashless Payment</h2>
+            <p class="item-text">Marketing</p>
             <p class="text-behind">
               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
               App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -78,8 +78,8 @@
             />
           </li>
           <li>
-            <h2 class="list-title">Meditaion App</h2>
-            <p class="list-text">App</p>
+            <h2 class="list-items">Meditaion App</h2>
+            <p class="item-text">App</p>
             <img
               src="./images/portfolio/meditaion-app.jpg"
               alt="Meditaion App"
@@ -88,8 +88,8 @@
             />
           </li>
           <li>
-            <h2 class="list-title">Taxi Service</h2>
-            <p class="list-text">Marketing</p>
+            <h2 class="list-items">Taxi Service</h2>
+            <p class="item-text">Marketing</p>
             <img
               src="./images/portfolio/taxi-service.jpg"
               alt="Taxi Service"
@@ -98,8 +98,8 @@
             />
           </li>
           <li>
-            <h2 class="list-title">Screen Illustrations</h2>
-            <p class="list-text">Design</p>
+            <h2 class="list-items">Screen Illustrations</h2>
+            <p class="item-text">Design</p>
             <img
               src="./images/portfolio/screen-illustrations.jpg"
               alt="Screen Illustrations"
@@ -108,8 +108,8 @@
             />
           </li>
           <li>
-            <h2 class="list-title">Online Courses</h2>
-            <p class="list-text">Marketing</p>
+            <h2 class="list-items">Online Courses</h2>
+            <p class="item-text">Marketing</p>
             <img
               src="./images/portfolio/online-courses.jpg"
               alt="Online Courses"
@@ -118,8 +118,8 @@
             />
           </li>
           <li>
-            <h2 class="list-title">Instagram Stories Concept</h2>
-            <p class="list-text">Design</p>
+            <h2 class="list-items">Instagram Stories Concept</h2>
+            <p class="item-text">Design</p>
             <img
               src="./images/portfolio/instagram-stories-concept.jpg"
               alt="Instagram Stories Concept"
@@ -128,8 +128,8 @@
             />
           </li>
           <li>
-            <h2 class="list-title">Organic Food</h2>
-            <p class="list-text">Web Site</p>
+            <h2 class="list-items">Organic Food</h2>
+            <p class="item-text">Web Site</p>
             <img
               src="./images/portfolio/organic-food.jpg"
               alt="Organic Food"
@@ -138,8 +138,8 @@
             />
           </li>
           <li>
-            <h2 class="list-title">Fresh Coffee</h2>
-            <p class="list-text">Web Site</p>
+            <h2 class="list-items">Fresh Coffee</h2>
+            <p class="item-text">Web Site</p>
             <img
               src="./images/portfolio/fresh-coffee.jpg"
               alt="Fresh Coffee"
@@ -152,7 +152,7 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo line-height">WEB<span class="logo-footer">STUDIO</span></a>
+      <a class="logo line-height" href="./index.html">WEB<span class="logo-footer">STUDIO</span></a>
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
