--- a/studio.html
+++ b/studio.html
@@ -18,25 +18,25 @@
     <header>
       <!-- create navigation -->
       <nav>
-        <a href="./index.html" class="logo">WEB<span class="logo-header">STUDIO</span></a>
+        <a class="logo" href="./index.html">WEB<span class="logo-header">STUDIO</span></a>
         <ul class="list">
-          <li><a href="./studio.html" class="nav-links">Studio</a></li>
-          <li><a href="./portfolio.html" class="nav-links">Portfolio</a></li>
-          <li><a href="" class="nav-links">Contacts</a></li>
+          <li><a class="nav-links" href="./studio.html">Studio</a></li>
+          <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="nav-links" href="">Contacts</a></li>
         </ul>
       </nav>
 
       <!-- create contacts -->
       <ul class="list">
-        <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
+        <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
 
     <main></main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo line-height">WEB<span class="logo-footer">STUDIO</span></a>
+      <a class="logo line-height" href="./index.html">WEB<span class="logo-footer">STUDIO</span></a>
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
