--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       <nav>
         <a class="logo" href="./index.html">WEB<span class="logo-header">STUDIO</span></a>
         <ul class="list">
-          <li><a class="nav-links" href="./studio.html">Studio</a></li>
+          <li><a class="nav-links" href="./index.html">Studio</a></li>
           <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
           <li><a class="nav-links" href="">Contacts</a></li>
         </ul>
@@ -36,8 +36,8 @@
     <main>
       <h1 class="hiden-text">Portfolio</h1>
 
-      <!-- create sections of filters buttons -->
       <section>
+        <!-- create list of filters buttons -->
         <h2 class="hiden-text">List of filters</h2>
         <ul class="list">
           <li><button class="button-filters" type="button">All</button></li>
@@ -46,10 +46,8 @@
           <li><button class="button-filters" type="button">Design</button></li>
           <li><button class="button-filters" type="button">Marketing</button></li>
         </ul>
-      </section>
 
-      <!-- create section of examples-->
-      <section>
+        <!-- create list of examples-->
         <h2 class="hiden-text">Examples of work</h2>
         <ul class="list">
           <li>
