--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav>
         <a class="logo" href="./index.html">WEB<span class="logo-header">STUDIO</span></a>
         <ul class="list">
-          <li><a class="nav-links" href="./studio.html">Studio</a></li>
+          <li><a class="nav-links" href="./index.html">Studio</a></li>
           <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
           <li><a class="nav-links" href="">Contacts</a></li>
         </ul>
@@ -35,8 +35,8 @@
 
     <main>
       <!-- create section title site -->
-      <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
+      <section>
+        <h1 class="hero">Effective Solutions for Your Business</h1>
         <button class="button" type="button">Order Service</button>
       </section>
 
